[tool.poetry]
name = "labelbox-cv"
version = "0.1.0"
description = ""
authors = ["Nasr Maswood <nasr@labelbox.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
